# Sockets-UM-Routes

./: Makefile  README.md  client.cpp  client.hpp  main.cpp  networkEntity.cpp  networkEntity.hpp  serialize.cpp  serialize.hpp  server  server.cpp  server.hpp  test_client1.cpp  test_client2.cpp  test_server.cpp
Sockum/: CMakeLists.txt  Sockum.hpp  client.hpp  networkEntity.hpp  server.hpp
Sockum/include/: Sockum.hpp  client.hpp  networkEntity.hpp  room.hpp  server.hpp
Sockum/include/utils/: base64.hpp  crypto.hpp  managePack.hpp  serialize.hpp  sockumfile.hpp
Sockum/src/: client.cpp  networkEntity.cpp  room.cpp  server.cpp
Sockum/src/utils/: crypto.cpp  managePack.cpp  serialize.cpp
Sockum/utils/: managePack.hpp  serialize.hpp
examples/1. basic/: Makefile  client.cpp  server.cpp
examples/2. files/: Makefile  client1.cpp  client2.cpp  server.cpp
examples/3. create_room/: Makefile  create_room_client1.cpp  create_room_client2.cpp  create_room_server.cpp
examples/4. chat/: Makefile  client.cpp  server.cpp
examples/5. broadcast/: Makefile  client.cpp  server.cpp
examples/create_room/: Makefile  create_room_server.cpp
test/: client.cpp  server.cpp
